@@ -78,6 +78,7 @@
 */
 #include <pbs_config.h>   /* the master config generated by configure */
 
+#include <ctype.h>
 #include <stdio.h>
 #include <sys/types.h>
 #include <netdb.h>
@@ -155,17 +156,23 @@ pbs_net_t get_hostaddr(
     while ((tmp = strchr(dash+1,'-')))
       dash = tmp;
 
-    /* terminate string temporarily */
-    *dash = '\0';
-
-    if (!(hp = gethostbyname(hostname)))
+    if (isdigit(*(dash+1)))
       {
-      /* not a numa-owned node, act normal */
-      *dash = '-';
-      hp = gethostbyname(hostname);
+      /* terminate string temporarily */
+      *dash = '\0';
+
+      /* check if this resolves to a hostname without the dash */
+      if (!(hp = gethostbyname(hostname)))
+        {
+        /* not a numa-owned node, act normal */
+        *dash = '-';
+        hp = gethostbyname(hostname);
+        }
       }
     /* otherwise proceed with just the parent hostname so 
      * it can be resolved */
+    else
+      hp = gethostbyname(hostname);
     }
   else
     hp = gethostbyname(hostname);
